--- a/i18n/de.json
+++ b/i18n/de.json
@@ -2,7 +2,7 @@
   "landing": {
     "title": "Hebamme",
     "sub-title": "Jana Göllner",
-    "phone-value": "01234567",
+    "phone-value": "+49 162 7349111",
     "email-value": "test@test.de"
   },
   "after-care": {
