add landing sub text

--- a/i18n/de.json
+++ b/i18n/de.json
@@ -3,7 +3,9 @@
     "title": "Hebamme",
     "sub-title": "Jana Göllner",
     "phone-value": "+49 162 7349111",
-    "email-value": "test@test.de"
+    "email-value": "test@test.de",
+    "sub-1": "Vorsorge, Nachsorge, Akkupunktur",
+    "sub-2": "Eisenach, Creuzburg, Treffurt, Ruhla und Umgebung"
   },
   "after-care": {
     "title": "Nachsorge",
