--- a/i18n/de.json
+++ b/i18n/de.json
@@ -1,31 +1,44 @@
 {
-  "landing": {
-    "title": "Hebamme",
-    "sub-title": "Jana Göllner",
-    "phone-value": "+49 162 7349111",
-    "email-value": "test@test.de",
-    "sub-1": "Vorsorge, Nachsorge, Akkupunktur",
-    "sub-2": "Eisenach, Creuzburg, Treffurt, Ruhla und Umgebung"
-  },
-  "after-care": {
-    "title": "Nachsorge",
-    "desc": "Reprehenderit proident anim proident sint ut esse aliqua. Eiusmod mollit anim sint exercitation reprehenderit. Aliqua labore sunt culpa esse. Sit amet cillum dolor eu. Amet aliqua voluptate eu elit proident eu elit."
-  },
-  "pre-care": {
-    "title": "Vorsorge",
-    "desc": "Magna incididunt est in cillum tempor nulla ipsum cupidatat nisi laboris excepteur laborum. Labore nulla ipsum culpa Lorem enim excepteur commodo proident sit ex magna ea nisi tempor. Magna officia officia incididunt cupidatat eu."
-  },
   "about-me": {
-    "title": "Über mich",
     "desc": "Do est excepteur ad aliqua laborum aliquip. Quis culpa incididunt enim aliquip aliqua nisi consequat aliquip quis duis et exercitation nisi veniam. Qui veniam ex minim officia et quis deserunt.",
     "education": "Ausbildung",
     "education-desc": "Exercitation dolore in minim aute officia cillum elit fugiat aliquip culpa pariatur ullamco. Ut eu non non ad mollit exercitation reprehenderit ut deserunt incididunt Lorem consequat enim. Consequat sit elit exercitation Lorem sit eu cillum dolor tempor ut magna eu.",
     "region": "Region",
     "region-desc": "Ich selbst komme aus Wutha-Farnroda und bin gerne für Familien in den folgenden Gegenden da",
-    "region-list": "Wutha, Eisenach, ..."
+    "region-list": "Wutha, Eisenach, ...",
+    "title": "Über mich"
   },
   "acupuncture": {
-    "title": "Akkupunktur",
-    "desc": "Et cillum nisi magna nulla laboris ipsum. Enim nisi sunt irure nisi cupidatat sit eiusmod reprehenderit. Commodo magna minim aliquip aute minim non sit ex laboris. Eu aliquip consectetur proident voluptate cillum ea veniam elit. Proident proident fugiat Lorem nulla tempor id anim veniam. Magna cupidatat officia laboris magna ullamco labore. Ea ullamco quis nulla aliqua sunt laborum aliqua aute."
+    "desc": "Et cillum nisi magna nulla laboris ipsum. Enim nisi sunt irure nisi cupidatat sit eiusmod reprehenderit. Commodo magna minim aliquip aute minim non sit ex laboris. Eu aliquip consectetur proident voluptate cillum ea veniam elit. Proident proident fugiat Lorem nulla tempor id anim veniam. Magna cupidatat officia laboris magna ullamco labore. Ea ullamco quis nulla aliqua sunt laborum aliqua aute.",
+    "title": "Akkupunktur"
+  },
+  "after-care": {
+    "desc": "Reprehenderit proident anim proident sint ut esse aliqua. Eiusmod mollit anim sint exercitation reprehenderit. Aliqua labore sunt culpa esse. Sit amet cillum dolor eu. Amet aliqua voluptate eu elit proident eu elit.",
+    "title": "Nachsorge"
+  },
+  "impressum": {
+    "title": "Impressum"
+  },
+  "navigation": {
+    "start-page": "Willkommen"
+  },
+  "pre-care": {
+    "desc": "Magna incididunt est in cillum tempor nulla ipsum cupidatat nisi laboris excepteur laborum. Labore nulla ipsum culpa Lorem enim excepteur commodo proident sit ex magna ea nisi tempor. Magna officia officia incididunt cupidatat eu.",
+    "title": "Vorsorge"
+  },
+  "services": {
+    "title": "Leistungen"
+  },
+  "side-panel": {
+    "email-value": "test@test.de",
+    "phone-value": "+49 162 7349111",
+    "sub-1": "Vorsorge, Nachsorge, Akkupunktur",
+    "sub-2": "Eisenach, Creuzburg, Treffurt, Ruhla und Umgebung",
+    "sub-title": "Jana Göllner",
+    "title": "Hebamme"
+  },
+  "welcome": {
+    "text": "Herzlich Willkommen liebe werdende Mamas, Mamas, liebe junge Familien.<br><br>Die Schwangerschaft, die Geburt und das Zusammenwachsen als Familie ist eine ganz besondere und wertvolle Zeit im Leben. Getragen von vielen Erwartungen und Hoffnungen gilt es neue Wege zu beschreiten. Jedes Kind, jede Schwangerschaft und jede Geburt ist einzigartig. So begegnet man in dieser Phase immer wieder neuen Herausforderungen sowie großen und kleinen Überraschungen.<br><br>Gerne begleite ich Sie als Hebamme in dieser spannenden Zeit. Kontaktieren Sie mich einfach per Telefon oder Mail.",
+    "title": "Willkommen"
   }
 }
