--- a/i18n/de.json
+++ b/i18n/de.json
@@ -12,6 +12,9 @@
     "desc": "Reprehenderit proident anim proident sint ut esse aliqua. Eiusmod mollit anim sint exercitation reprehenderit. Aliqua labore sunt culpa esse. Sit amet cillum dolor eu. Amet aliqua voluptate eu elit proident eu elit.",
     "title": "Betreuung nach der Geburt"
   },
+  "contact": {
+    "title": "Kontakt"
+  },
   "impressum": {
     "title": "Impressum"
   },
