add data-security page

--- a/i18n/de.json
+++ b/i18n/de.json
@@ -21,6 +21,7 @@
     "desc": "<ul class=\"bullets\"><li>Wochenbettbetreuung (bis 12 Wochen nach der Geburt bei Ihnen zu Hause)</li><li>Stillberatung bis zum Ende der Stillzeit</li></ul>",
     "title": "Betreuung nach der Geburt"
   },
+  "close": "Schließen",
   "contact": {
     "call-now": "Jetzt anrufen",
     "email-now": "E-Mail schreiben",
