adjust data security

--- a/i18n/de.json
+++ b/i18n/de.json
@@ -31,7 +31,7 @@
     "title": "Kontakt"
   },
   "data-security": {
-    "cookie-disclaimer": "Diese Website verwendet Cookies. Es werden nur technisch notwendige Cookies in Ihrem Browser gespeichert, da sie für das Funktionieren grundlegender Funktionalitäten der Website unerlässlich sind. Es werden keinerlei Daten erhoben.",
+    "cookie-disclaimer": "Diese Website verwendet Cookies. Es werden nur technisch notwendige Cookies in Ihrem Browser gespeichert, da sie für das Funktionieren grundlegender Funktionalitäten der Website unerlässlich sind.",
     "ok": "Ok",
     "read-more": "Mehr lesen"
   },
