reset maternal leave and update children count

--- a/i18n/de.json
+++ b/i18n/de.json
@@ -4,7 +4,7 @@
   "2014-since": "seit 2014",
   "maternal-leave": "Ihr Lieben,<br>ab August 2022 bin ich selbst in Elternzeit und nehme aktuell keine Betreuungen mehr an. Ab August 2023 bin ich gerne wieder für euch da.",
   "about-me": {
-    "desc": "Ich bin Jana und seit 2013 Hebamme. Ich lebe in Wutha-Farnroda, bin verheiratet und Mama von einem Sohn (2019 geboren).",
+    "desc": "Ich bin Jana und seit 2013 Hebamme. Ich lebe in Wutha-Farnroda, bin verheiratet und Mama von zwei Söhnen (2019 und 2022 geboren).",
     "title": "Über mich",
     "years": {
       "0": "Abschluss der Ausbildung und Examen zur Hebamme in Halle (Saale)",
