feat(overhaul): plain react, new layout, markdown loading, design

--- a/src/general/locales/de/translation.json
+++ b/src/general/locales/de/translation.json
@@ -1,26 +1,47 @@
 {
-  "about-me": "Über mich",
-  "blog": "Blog",
+  "about-me": {
+    "nav": "Über mich"
+  },
+  "birth-aftercare": {
+    "nav": "Nachsorge"
+  },
+  "blog": {
+    "nav": "Wissenswertes",
+    "back-to-blog": "Zurück zur Übersicht"
+  },
+  "back": "Zurück",
   "close": "Schließen",
+  "sportswoman": "Sportlerin",
   "contact": {
     "call": "Anrufen",
-    "call-now": "Jetzt anrufen",
-    "email": "E-Mail",
     "email-link-value": "jana-goellner%40web.de",
-    "email-now": "E-Mail schreiben",
     "email-value": "jana-goellner[at]web.de",
-    "map": "Eisenach, Wutha-Farnroda und Umgebung",
-    "phone-value": "0160 95332264",
-    "title": "Kontakt"
+    "phone-value": "0160 95332264"
   },
-  "imprint": "Impressum",
+  "data-security": {
+    "cookie-disclaimer": "Diese Website verwendet Cookies. Es werden nur technisch notwendige Cookies in Ihrem Browser gespeichert, da sie für das Funktionieren grundlegender Funktionalitäten der Website unerlässlich sind.",
+    "nav": "Datenschutz",
+    "ok": "Ok",
+    "read-more": "Mehr lesen"
+  },
+  "fertility-cycle-counseling": {
+    "nav": "Kinderwunsch- und Zyklusberatung"
+  },
+  "imprint": {
+    "nav": "Impressum"
+  },
   "jana-goellner": "Jana Goellner",
+  "midwife": "Hebamme",
+  "mother": "Mutter",
   "navigation": "Navigation",
-  "services": "Leistungen",
+  "pregnancy": {
+    "nav": "Schwangerschaft"
+  },
+  "tcm": {
+    "nav": "TCM",
+    "tcm": "TCM"
+  },
   "welcome": {
-    "text": "Herzlich willkommen auf meiner Webseite! Ich freue mich, dass Sie den Weg zu mir gefunden haben. Als erfahrene Hebamme biete ich Ihnen eine umfassende und persönliche Betreuung während dieser besonderen Zeit in Ihrem Leben. Mein Ziel ist es, Ihnen mit Rat und Tat zur Seite zu stehen und Sie auf Ihrem Weg zu einem harmonischen und glücklichen Familienleben zu unterstützen.",
-    "header": "Mit Herz und Hand für Mutter und Kind",
-    "sub-header": "Einfühlsame und kompetente Begleitung rund um Schwangerschaft, Geburt und Wochenbett",
-    "title": "Willkommen"
+    "nav": "Willkommen"
   }
 }
